--- a/app/css/dropdowns/notifications.css
+++ b/app/css/dropdowns/notifications.css
@@ -53,7 +53,7 @@
             & .action-icon {
                 height: 16px;
                 width: 16px;
-                @apply text-textColor6;
+                @apply filter-textColor6;
             }
         }
         & .c-prominent-link {
