--- a/app/css/ui-kit/filters.css
+++ b/app/css/ui-kit/filters.css
@@ -25,6 +25,11 @@
         filter: var(--textColor1-filter);
     }
 
+    .filter-textColor1NoDark {
+        filter: invert(10%) sepia(35%) saturate(3157%) hue-rotate(231deg)
+            brightness(99%) contrast(113%);
+    }
+
     .filter-textColor2 {
         filter: var(--textColor2-filter);
     }
@@ -39,6 +44,11 @@
 
     .filter-textColor6 {
         filter: var(--textColor6-filter);
+    }
+
+    .filter-textColor6NoDark {
+        filter: invert(35%) sepia(3%) saturate(6422%) hue-rotate(208deg)
+            brightness(94%) contrast(87%);
     }
 
     .filter-textColor7 {
