--- a/app/views/mailers/notifications_mailer/onboarding_community.html.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_community.html.haml
@@ -1,10 +1,37 @@
-%p Hi #{@user.handle},
+%p Hello there!
+
 %p
-  \...
+  I hope you're enjoying your first few days on #{link_to 'Exercism', 'https://exercism.org'}.
+  As you continue to explore our platform, I wanted to take a moment to tell you about our amazing community.
+
 %p
-  \...
+  Exercism is an open-source, community-powered project.
+  In fact we're one of the biggest Open Source organisations on #{link_to 'GitHub', 'https://github.com/exercism/'} with over 350 repositories.
+  Our community is centered around our values of empathy, kindness, and inclusivity.
+  We strive to create a safe and supportive space where people from all walks of life can come together to learn and grow.
+
 %p
-  \...
+  We have several community features that I think you'll find interesting and enjoyable:
+%ul
+  %li
+    Our #{link_to 'forum', 'https://forum.exercism.org'} is a great place to ask questions, share ideas, and connect with others who are passionate about coding.
+  %li
+    On #{link_to 'Twitch', 'https://twitch.tv/exercismlive'}, we host reguar live streaming featuring both our community and live guests from the coding ecosystem.
+  %li
+    Our #{link_to 'YouTube Channel', 'https://www.youtube.com/@exercism_org'} is the space to find our prime video content - educational walkthrough, Exercism updates, community stories, and interviews with industry experts.
+
+%p
+  We would love for you to join in and become an active member of our community.
+  Whether you're a seasoned developer or just starting out, there is a place for you here.
+  So don't be shy, come say hello and get involved!
+
+%p
+  Best regards,
+
+%p
+  Jonathan
+  %br
+  Exercism Community Manager
 
 = email_button_to 'Visit Exercism', root_url
 
