Add welcome modal

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -1,5 +1,5 @@
 #page-dashboard
-  = render ReactComponents::Modals::Challenge12in23Modal.new
+  = render ReactComponents::Modals::WelcomeModal.new
 
   .summary-bar
     .lg-container.container
