--- a/app/views/mailers/notifications_mailer/joined_exercism.text.haml
+++ b/app/views/mailers/notifications_mailer/joined_exercism.text.haml
@@ -1,9 +1,20 @@
-Hi #{@user.handle},
+Hey there,
 \
-We're so glad you've signed up! Exercism is a not-for-profit organisation dedicated to helping as many people as possible improve their programming fluency.
+Welcome to Exercism! We're excited to have you as a part of our community and looking forward to helping you as you go even deeper on your programming journey.
 \
-We have over 50 languages for you to explore, many with full-on courses for learning that language. All tracks have volunteer mentors who want to help you develop an understanding of why they love those languages, and help you get fluent in them.
+Exercism is designed to be help you develop a deep understanding of whichever language you choose to learn. We're a registered not-for-profit organisation and 100% free.
 \
-We hope you have a great time on Exercism and find it both useful and fun!
+I put this video together (which you might have seen when you signed up) which walks you through a few key things: https://www.youtube.com/watch?v=8rmbTWAncb8
+\
+If you ever get stuck or have questions, don't hesitate to post in our forum. Our community is friendly and supportive, and we're always happy to help. We believe that learning is a collaborative effort and that we can all learn from each other.
+\
+Finally, don't miss out on our YouTube channel where we share interesting interviews, walkthroughs, and tutorials about Exercism. You might find some tips and tricks that will make your learning journey even more enjoyable.
+\
+Have a great day!
+\
+Jeremy Walker
+Exercism's Co-founder &amp; CEO
+\
+\---
 \
 Visit Exercism: #{root_url}
