Add proper mailshot support

--- a/app/views/admin/streaming_events/new.html.haml
+++ b/app/views/admin/streaming_events/new.html.haml
@@ -1,5 +1,5 @@
 .lg-container
-  %h1.text-h1 Editing streaming event
+  %h1.text-h1 New streaming event
   = render "form", streaming_event: @streaming_event
   %br/
   %div
