--- a/app/views/about/individual_supporters.html.haml
+++ b/app/views/about/individual_supporters.html.haml
@@ -43,8 +43,8 @@
           %h2.text-15.leading-140.text-textColor5.font-semibold.mb-4 Why am I not on this page?
           %p.text-14.leading-140.text-textColor5
             This page aims to show all individuals who have financially supported Exercism.
-            Technically, it lists everyone who have been awarded the Supporters Badge and who have enabled the "Appear on supporters page?" toggle in their #{link_to 'Donations Settings', donations_settings_path, class: 'text-lightBlue font-medium'}.
-            Donating through the Exercism website should automatically award you the Supporters badge.
+            Technically, it lists everyone who have been awarded the Supporter badge and who have enabled the "Appear on supporters page?" toggle in their #{link_to 'Donations Settings', donations_settings_path, class: 'text-lightBlue font-medium'}.
+            Donating through the Exercism website should automatically award you the Supporter badge.
             However, donating through a third party website (e.g. GitHub) may require you to email #{link_to 'donations@exercism.org', 'mailto:donations@exercism.org', class: 'text-lightBlue font-medium'} to ask us to manually award the badge.
 
 
