Break out css from `site_updates` into `css/pages/maintaining/admin-table.css`

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -220,6 +220,7 @@
 @import "./pages/mentoring/testimonials";
 @import "./pages/maintaining/dashboard";
 @import "./pages/maintaining/track";
+@import "./pages/maintaining/admin-table";
 @import "./pages/journey";
 @import "./pages/journey/overview";
 @import "./pages/journey/solutions";
