--- a/app/views/maintaining/site_updates/index.html.haml
+++ b/app/views/maintaining/site_updates/index.html.haml
@@ -1,33 +1,4 @@
-:css
-  #maintaining-site-updates {
-    padding:25px 0%;
-    font-size: 16px;
-    line-height:1.5;
-  }
-  h2 {
-    font-size: 20px;
-    margin-bottom: 16px;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  th {
-    border: 1px solid #ddd;
-    border-bottom: 1px solid #888;
-    padding: 10px;
-    text-align:left;
-    font-weight:600px;
-  }
-  td {
-    border: 1px solid #ddd;
-    border-bottom: 1px solid #aaa;
-    padding: 10px;
-    vertical-align:top;
-    max-width:300px;
-  }
-
-#maintaining-site-updates
+#maintaining-site-updates.c-admin-table
   .lg-container
     %table
       %thead
