Apply c-admin-table on streaming events table

--- a/app/views/admin/streaming_events/index.html.haml
+++ b/app/views/admin/streaming_events/index.html.haml
@@ -1,6 +1,6 @@
-.lg-container
+.c-admin-table.lg-container
   %h1.text-h1.mb-8 Streaming events
-  %table
+  %table.mb-8
     - @streaming_events.each do |streaming_event|
       %tr
         %td= streaming_event.title
