Break out discussion-timeline into a separate css file

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -64,6 +64,7 @@
 @import "./components/solution-iterations";
 @import "./components/loading-overlay";
 @import "./components/loading-suspense";
+@import "./components/discussion-timeline";
 
 @import "./components/share-panel";
 @import "./components/split-pane";
