--- a/app/views/admin/mailshots/edit.html.haml
+++ b/app/views/admin/mailshots/edit.html.haml
@@ -1,6 +1,6 @@
 .lg-container
   %h1.text-h1 Editing mailshot
-  = render "form", mailshot: @mailshot, communication_preferences_keys: communication_preferences_keys
+  = render "form", mailshot: @mailshot, communication_preferences_keys: @communication_preferences_keys
   %br/
   %div
     = link_to "Manage this mailshot", @amailshot
