Support non-Stripe donors (#3541)
* Add donated column to users

* Set donate to true when creating payment

* Use correct name for Supporter badge

* Remove unused delegation from site footer

* Fix test class name for site footer

* Show support prompt based on donated field

* Award supporter badge based on donated? field

* Use donated? instead of donated

* Add guard for ensuring user is staff

* Add command to register as donor

* Update column and index

* Move registering of being donor to command

* Add scope for supporter and donor

* Allow creating donors in admin

* Show supporting users via User.supporter

* Use User.supporter for community supporters

* Use User.supporter for pages supporters

* Add paging to donors

* Remove old code

* Move command to User::RegisterAsDonor

* Rename scope to public_supporter

* Use reverse index

* Tweak things

* Clean up a little more

* Fix things up more

* Don't overwrite first donated at date

* Automatically make github sponsors be awarded badge

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/views/about/individual_supporters.html.haml
+++ b/app/views/about/individual_supporters.html.haml
@@ -26,15 +26,14 @@
 
 
     .donors.grid.grid-cols-1.md:grid-cols-2.lg:grid-cols-3.gap-20.mb-20
-      - @badges.each do |badge|
-        - user = badge.user
+      - @supporting_users.each do |user|
         .donor.flex
           = image_tag user.avatar_url, alt: "User-uploaded avatar of #{user.name}"
           .text
             .name.text-h5.mb-2= user.name
-            .when.text-textColor6 First supported #{time_ago_in_words(badge.created_at)} ago
+            .when.text-textColor6 First supported #{time_ago_in_words(user.first_donated_at)} ago
 
-    = paginate @badges
+    = paginate @supporting_users
 
     .missing.border-1.border-borderLight.rounded-8.py-12.px-16.bg-backgroundColorA.mt-40
       .flex
@@ -43,8 +42,8 @@
           %h2.text-15.leading-140.text-textColor5.font-semibold.mb-4 Why am I not on this page?
           %p.text-14.leading-140.text-textColor5
             This page aims to show all individuals who have financially supported Exercism.
-            Technically, it lists everyone who have been awarded the Supporters Badge and who have enabled the "Appear on supporters page?" toggle in their #{link_to 'Donations Settings', donations_settings_path, class: 'text-lightBlue font-medium'}.
-            Donating through the Exercism website should automatically award you the Supporters badge.
+            Technically, it lists everyone who have been awarded the Supporter badge and who have enabled the "Appear on supporters page?" toggle in their #{link_to 'Donations Settings', donations_settings_path, class: 'text-lightBlue font-medium'}.
+            Donating through the Exercism website should automatically award you the Supporter badge.
             However, donating through a third party website (e.g. GitHub) may require you to email #{link_to 'donations@exercism.org', 'mailto:donations@exercism.org', class: 'text-lightBlue font-medium'} to ask us to manually award the badge.
 
 
