Add basic table css to donors table

--- a/app/views/admin/donors/index.html.haml
+++ b/app/views/admin/donors/index.html.haml
@@ -1,6 +1,6 @@
-.lg-container
+.c-admin-table.lg-container
   %h1.text-h1.mb-8 Donors
-  %table
+  %table.mb-8
     %tr
       %th Name
       %th Handle
