--- a/app/views/maintaining/site_updates/_form.html.haml
+++ b/app/views/maintaining/site_updates/_form.html.haml
@@ -5,11 +5,11 @@
     = f.text_field :title
 
   .field
-    = f.label :title, "Description"
-    = f.text_area :description
+    = f.label :title, "Description (markdown)"
+    = f.text_area :description_markdown
 
   .field
-    = f.label :pull_request_number, "Pull Request ID (#{@update.track.repo_url}/pull/xxx)"
+    = f.label :pull_request_number, "Pull Request ID (#{@update.track.repo_url}/pull/<ID>)"
     = f.text_field :pull_request_number
 
   = f.button "Update Post", class: "btn-primary btn-m"
