--- a/app/views/maintaining/site_updates/index.html.haml
+++ b/app/views/maintaining/site_updates/index.html.haml
@@ -18,13 +18,16 @@
           - when SiteUpdates::NewConceptUpdate
             %td Concept
             %td #{update.track&.title} / #{update.concept&.name}
+          - when SiteUpdates::ArbitaryUpdate
+            %td Arbitrary
+            %td= update.track&.title
 
           %td= update.published_at
           %td
             - if update.expanded?
               .title= update.title
               .handle= update.author.handle
-              %p= update.description
+              %p= update.description_markdown
           %td= update.pull_request&.title
           %td
             - if update.editable_by?(current_user)
