--- a/app/views/maintaining/site_updates/new.html.haml
+++ b/app/views/maintaining/site_updates/new.html.haml
@@ -1,3 +1,4 @@
 #maintaining-site-update-form.c-site-updates-form
-  %h1 hey
+  %h1.text-h1 New site update
   = render "form"
+  = link_to "Back to site updates", maintaining_site_updates_path
