--- a/app/views/maintaining/site_updates/edit.html.haml
+++ b/app/views/maintaining/site_updates/edit.html.haml
@@ -1,4 +1,3 @@
 #maintaining-site-update-form.c-site-updates-form
   %h2.text-h3 Edit Update
-  = render "form"
-  = link_to "Back to site updates", maintaining_site_updates_path
+  = render "form", button_label: "Edit update"
