--- a/app/views/maintaining/site_updates/_form.html.haml
+++ b/app/views/maintaining/site_updates/_form.html.haml
@@ -20,6 +20,6 @@
     = form.text_field :pull_request_number
 
   .flex.gap-8
-    = f.button button_label, class: "btn-primary btn-m"
+    = form.button button_label, class: "btn-primary btn-m"
     = link_to maintaining_site_updates_path, class: "btn-primary btn-m" do
       Back to site updates
