--- a/app/views/maintaining/site_updates/new.html.haml
+++ b/app/views/maintaining/site_updates/new.html.haml
@@ -1,3 +1,3 @@
 #maintaining-site-update-form.c-site-updates-form
   %h2.text-h3 New Site Update
-  = render "form", update: @update, button_label: "New Update"
+  = render "form", update: @update, url: %i[maintaining site_updates], button_label: "Create Site Update"
