Fix spelling and add tests

--- a/app/views/maintaining/site_updates/index.html.haml
+++ b/app/views/maintaining/site_updates/index.html.haml
@@ -18,7 +18,7 @@
           - when SiteUpdates::NewConceptUpdate
             %td Concept
             %td #{update.track&.title} / #{update.concept&.name}
-          - when SiteUpdates::ArbitaryUpdate
+          - when SiteUpdates::ArbitraryUpdate
             %td Arbitrary
             %td= update.track&.title
 
