--- a/app/views/maintaining/site_updates/index.html.haml
+++ b/app/views/maintaining/site_updates/index.html.haml
@@ -30,7 +30,7 @@
             - if update.expanded?
               .title= update.title
               .handle= update.author.handle
-              %p= update.description_markdown
+              %p= update.description_html&.html_safe
           %td= update.pull_request&.title
           %td
             - if update.editable_by?(current_user)
