--- a/app/views/admin/mailshots/show.html.haml
+++ b/app/views/admin/mailshots/show.html.haml
@@ -25,7 +25,7 @@
     - if @mailshot.test_sent?
       = form_tag send_to_audience_admin_mailshot_path, method: :patch, class: "flex flex-row items-center mt-20", data: { turbo_confirm: "Are you sure you want to send it to this audience?" } do
         .c-select
-          = select_tag :audience, options_for_select(@audiences)
+          = select_tag :audience, options_for_select(@audiences.map { |a| (a1 = a.split("#")) && [[a1[0].titleize, a1[1]].compact.join(": "), a] })
         = button_tag "Send to audience", class: 'btn btn-standard btn-base ml-8'
 
   %hr.my-24
