--- a/app/views/tracks/mentor_discussions/_introduction.html.haml
+++ b/app/views/tracks/mentor_discussions/_introduction.html.haml
@@ -3,16 +3,16 @@
     .content
       %h2 Take your solution to the next level
       %p
-        Get mentored on your solution to
+        Get feedback on your solution to
         %strong= exercise.title
-        by a #{track.title} mentor to discover new ways to approach the problem, and expand and deepen your #{track.title} knowledge.
+        by a #{track.title} mentor and discover new ways to approach the problem, and expand and deepen your #{track.title} knowledge.
       .btns
-        = link_to "Request mentoring", new_track_exercise_mentor_request_path(track, exercise), class: 'btn-primary btn-m'
+        = link_to "Submit for code review", new_track_exercise_mentor_request_path(track, exercise), class: 'btn-primary btn-m'
         .wow It’s absolutely free! 😲
 
     = graphical_icon "mentoring-prompt", category: 'graphics'
   .why
-    %h3 Why mentoring?
+    %h3 Why get feedback?
     .points
       .point
         %h4 Attain real fluency in #{track.title}
