--- a/app/views/tracks/mentor_discussions/_introduction.html.haml
+++ b/app/views/tracks/mentor_discussions/_introduction.html.haml
@@ -39,13 +39,13 @@
       .point
         .num 1
         .content
-          %h4 Request mentoring
+          %h4 Submit for Code Review
           %p Send a request to the Exercism community. Tell us what you're aiming to learn so the right mentor can pair with you.
 
       .point
         .num 2
         .content
-          %h4 Acceptance &amp; feedback
+          %h4 Get feedback
           %p Once a mentor accepts your request, they’ll review your solution and request, and give you your first feedback.
 
       .point
