Add pending request message

--- a/app/views/tracks/mentor_discussions/_mentoring_requested.html.haml
+++ b/app/views/tracks/mentor_discussions/_mentoring_requested.html.haml
@@ -1,6 +1,6 @@
 .mentoring-requested
   .content
-    %h2 You’ve requested mentoring
+    %h2 You&apos;ve requested mentoring
     / TODO
     %p Waiting on a mentor...
   = link_to "View your request", track_exercise_mentor_request_path(track, exercise), class: 'btn-primary btn-s'
