--- a/app/views/tracks/mentor_discussions/index.html.haml
+++ b/app/views/tracks/mentor_discussions/index.html.haml
@@ -21,7 +21,7 @@
       .personal-mentoring{ class: @solution.mentoring_in_progress? ? 'locked' : nil }
         - if @solution.mentoring_in_progress?
           .c-alert.locked
-            %strong You’re currently being mentored.
+            %strong You&apos;re currently being mentored.
             Please end your existing discussion before starting a new mentoring session with someone else.
 
         .content
