Remove current_user

--- a/app/views/mentoring/external/show.html.haml
+++ b/app/views/mentoring/external/show.html.haml
@@ -1,4 +1,3 @@
--# rubocop:disable Style/HashSyntax
 #mentor-external-page
   %section.top-section
     .lg-container.c-shapes
@@ -13,9 +12,9 @@
 
       - if user_signed_in?
         - if current_user.reputation >= 20
-          = ReactComponents::Mentoring::TryMentoringButton.new.to_s
+          = ReactComponents::Mentoring::TryMentoringButton.new
         - else
-          = render "locked", current_user: current_user, profile_min_reputation: 20
+          = render "locked", profile_min_reputation: 20
       - else
         .flex.items-center
           = link_to "Sign up to try mentoring", new_user_registration_path, class: 'btn-m btn-primary'
@@ -42,4 +41,3 @@
           = graphical_icon "mentoring-soft-skills"
           %h3 Develop your "soft skills"
           %p Soft skills like communication and being able to take feedback are paramount in progressing in any field or profession.
--# rubocop:enable Style/HashSyntax
