Fix links on community page

--- a/app/views/community/show.html.haml
+++ b/app/views/community/show.html.haml
@@ -13,11 +13,11 @@
             Join our Discord for social chat and to get support. Use our Forum for deeper discussions and bug reports.
 
         .flex.flex-col.sm:flex-row.gap-12.mb-20
-          = link_to discord_redirect_path, class: "btn-primary btn-l sm:w-[fit-content]" do
+          = link_to discord_redirect_path, class: "btn-primary btn-l sm:w-[fit-content]", data: { turbo: false } do
             = graphical_icon "external-site-discord", css_class: '!filter-none'
             %span Join our Discord Server
 
-          = link_to forum_redirect_path, class: "btn-enhanced btn-l sm:w-[fit-content]" do
+          = link_to forum_redirect_path, class: "btn-enhanced btn-l sm:w-[fit-content]", data: { turbo: false } do
             %span Explore our forum
             = graphical_icon "arrow-right"
 
