--- a/app/css/components/site-update.css
+++ b/app/css/components/site-update.css
@@ -102,7 +102,7 @@
             }
         }
         & .description {
-            @apply text-p-base mb-20;
+            @apply text-p-base not-last:mb-20;
         }
         & .pull-request {
             @apply flex items-center;
