Add feedback tab to the editor (#3526)
* Add feedback tab

* Add automated feedbacks components - WIP

* Fix types, add potential source of data into editor.rb - WIP

* Add mentor-DiscussionPostList

* Remove unused types

* Use correct data

* Fix passing of discussion

* Add readonly Discussions to exercise

* Fix js tests

* Tweak styling

* Iteration is optional for editor

* Break out discussion-timeline into a separate css file

* Handle null iteration

* Fix a failing test

* Fix student side session test

* Don't show Feedback tab or panel if iteration is `null`

* Refactor code, apply conditionals, add RequestMentoring prompt text

* Hide panel too on iteration

* Pass down mentor_discussions link

* Add test stub for feedback tab

* Fix failing test

* Some false positive tests

* Fix test

* Add Feedback tab tests (#3557)

* Add editor tests, see if they pass

* Give better test names

* Add missing representer assertion, remove redundant line, change wording

* Tweaks to make things prettier and use 'Code Review'

* Further tweaks

* Further rename tweaks

* Update typescript, pass static analysis in FeedbackPanel.tsx

* Fix js tests

* Update ruby tests

* Update more tests

* Open automated feedback by default

* Update editor tests

* Update conditionals and editor tests

* Simplify conditional

* Add pending request message

* Fix apos in test

* Put requested message under accordion. Fix a test

* Refactor FeedbackPanelMentorDiscussion

* Fix apos failing test

* Fix wrong file name

* Further tweaks to Code Review

* Adjust tests to Code Review text

---------

Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>
Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/views/tracks/mentor_discussions/_introduction.html.haml
+++ b/app/views/tracks/mentor_discussions/_introduction.html.haml
@@ -3,16 +3,16 @@
     .content
       %h2 Take your solution to the next level
       %p
-        Get mentored on your solution to
+        Get feedback on your solution to
         %strong= exercise.title
-        by a #{track.title} mentor to discover new ways to approach the problem, and expand and deepen your #{track.title} knowledge.
+        by a #{track.title} mentor and discover new ways to approach the problem, and expand and deepen your #{track.title} knowledge.
       .btns
-        = link_to "Request mentoring", new_track_exercise_mentor_request_path(track, exercise), class: 'btn-primary btn-m'
+        = link_to "Submit for code review", new_track_exercise_mentor_request_path(track, exercise), class: 'btn-primary btn-m'
         .wow It’s absolutely free! 😲
 
     = graphical_icon "mentoring-prompt", category: 'graphics'
   .why
-    %h3 Why mentoring?
+    %h3 Why get feedback?
     .points
       .point
         %h4 Attain real fluency in #{track.title}
@@ -39,13 +39,13 @@
       .point
         .num 1
         .content
-          %h4 Request mentoring
+          %h4 Submit for Code Review
           %p Send a request to the Exercism community. Tell us what you're aiming to learn so the right mentor can pair with you.
 
       .point
         .num 2
         .content
-          %h4 Acceptance &amp; feedback
+          %h4 Get feedback
           %p Once a mentor accepts your request, they’ll review your solution and request, and give you your first feedback.
 
       .point
