Tidy up timeline in editor

--- a/app/css/pages/editor.css
+++ b/app/css/pages/editor.css
@@ -543,6 +543,15 @@
             }
         }
     }
+    .c-discussion-timeline {
+        & .timeline-entry {
+            @apply px-0;
+
+            &:before {
+                left: 16px;
+            }
+        }
+    }
 }
 
 /* General overrides */
