Add arbitary site updates (#3511)
* Add arbitary site updates

* Add changes to expanded update UI

* Change to description_markdown field to site update

* Site updates: Break out css, create `new` page, break out form into partial

* Render descriptionHtml

* Fix some site updates

* Add back buttons

* Tweak partial and styling a bit

* Site update form

* Fix form

* Improve look of admin table a bit

* Fix stuff up

* Fix new exercise makers

* Fix spelling and add tests

* Publish arbitrary immediately

* Render site update description as HTML

* Start fixing site update

* Apply suggestions from code review

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Add system test for arbitrary site update

* Use nil for markdown fields if source is nil

* Cleanup

* Add system tests for site updates on dashboard

* Update test looking for author img src

* Various tweaks

* Make 'today' title-cased

* Fix tests

* Fix one more failing test

* Add titleize option for date util fn

---------

Co-authored-by: dem4ron <demaaron88@gmail.com>
Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>
Co-authored-by: Aron Demeter <66035744+dem4ron@users.noreply.github.com>

--- a/app/views/maintaining/site_updates/edit.html.haml
+++ b/app/views/maintaining/site_updates/edit.html.haml
@@ -1,42 +1,3 @@
-:css
-  #maintaining-site-update-form {
-    padding:25px 5%;
-    font-size: 16px;
-  }
-  h2 {
-    font-size: 20px;
-    margin-bottom: 16px;
-  }
-  input, textarea {
-    width:400px;
-    border:1px solid #aaa;
-  }
-  textarea {
-    padding:20px;
-    height:100px;
-  }
-  .field {
-    margin-bottom:20px;
-  }
-  label {
-    display:block;
-  }
-
-#maintaining-site-update-form
-  %h2.text-h3 Edit Update
-  = form_for @update, url: maintaining_site_update_path(@update), as: :site_update do |f|
-    .field
-      = f.label :title, "Title"
-      = f.text_field :title
-
-    .field
-      = f.label :title, "Description"
-      = f.text_area :description
-
-    .field
-      = f.label :pull_request_number, "Pull Request ID (#{@update.track.repo_url}/pull/xxx)"
-      = f.text_field :pull_request_number
-
-    = f.button "Update Post", class: "btn-primary btn-m"
-
-
+#maintaining-site-update-form.c-site-updates-form
+  %h2.text-h3 Edit Site Update
+  = render "form", update: @update, url: maintaining_site_update_path(@update), button_label: "Update Site Update"
