Fix bug in settings nav

--- a/app/views/settings/integrations.html.haml
+++ b/app/views/settings/integrations.html.haml
@@ -1,6 +1,6 @@
 #page-settings-general.page-settings
   .lg-container
-    = render ViewComponents::SettingsNav.new(:general)
+    = render ViewComponents::SettingsNav.new(:integrations)
 
     %article
       %h1 Integrations
